add role-based authorization for protected endpoints